--- a/machine-learning-bookcamp/4_evaluation_metrics.ipynb
+++ b/machine-learning-bookcamp/4_evaluation_metrics.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyObVUgkT8XgU45b/XxOVfHD",
+      "authorship_tag": "ABX9TyPJei47o10purdxoHzZGJF6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,7 +101,7 @@
       "metadata": {
         "id": "vpCaukoZc2bM"
       },
-      "execution_count": 27,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -112,7 +112,7 @@
       ],
       "metadata": {
         "id": "bA6YUwP1c_KM",
-        "outputId": "ccd75797-cde1-41bd-9732-f53304836385",
+        "outputId": "4d6f6e24-f0a8-46b8-c436-d61381dc4e51",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -153,10 +153,32 @@
         "rm -rf telco-customer-churn.zip"
       ],
       "metadata": {
-        "id": "8EuMmwDKdXEm"
+        "id": "8EuMmwDKdXEm",
+        "outputId": "9180f15c-5bf1-44c2-da32-524e9abefcac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading telco-customer-churn.zip to /content\n",
+            "100% 172k/172k [00:00<00:00, 483kB/s]\n",
+            "100% 172k/172k [00:00<00:00, 483kB/s]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -179,7 +201,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "US7ds406eEwl",
-        "outputId": "be257312-2cc1-40d7-961c-3140fe01ef2d"
+        "outputId": "f29f9a9a-6a4c-4c33-f427-4775d00d03f4"
       },
       "execution_count": 5,
       "outputs": [
@@ -349,7 +371,7 @@
       ],
       "metadata": {
         "id": "TLhS3nSTym7G",
-        "outputId": "892e1380-3c34-4da5-f3e9-d19ba05d2441",
+        "outputId": "50cf7bd5-5a4c-4b94-89b9-46bb27ecb3a4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -380,7 +402,7 @@
       "metadata": {
         "id": "e5lHeB-A3YCh"
       },
-      "execution_count": 22,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -396,7 +418,7 @@
       "metadata": {
         "id": "UUx-lgthwwM0"
       },
-      "execution_count": 23,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -408,12 +430,12 @@
       ],
       "metadata": {
         "id": "lPydV0eLxvRf",
-        "outputId": "2aa8e637-8114-4056-fcda-56a3c4c989b4",
+        "outputId": "e2c4bf25-8bb0-40ac-95fe-d066fcd8a540",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -423,7 +445,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 19
         }
       ]
     },
@@ -440,7 +462,7 @@
       "metadata": {
         "id": "VkltuVVO3L-c"
       },
-      "execution_count": 25,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -479,12 +501,12 @@
       ],
       "metadata": {
         "id": "5wXT5F4_7qFY",
-        "outputId": "7f99e216-82cf-450f-cc94-577e7ab48da5",
+        "outputId": "c0b89db8-63df-4d70-9ea7-87ca4901e2e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -494,7 +516,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 21
         }
       ]
     },
@@ -522,12 +544,12 @@
       ],
       "metadata": {
         "id": "B3s_E9Qw85Hk",
-        "outputId": "9c731fbe-e46a-4a2b-dfd4-da858ca33911",
+        "outputId": "b256e0df-dd35-4190-aefb-c7fdd41a92c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -577,9 +599,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l16In7LtOcKw",
-        "outputId": "0f47fc55-e258-4c0c-8618-1728128c89c5"
+        "outputId": "d2f4aea0-0b2b-4829-8aca-e1f9627e644f"
       },
-      "execution_count": 42,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -589,7 +611,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 23
         }
       ]
     },
@@ -609,13 +631,13 @@
       ],
       "metadata": {
         "id": "Rb-DnyyM9GPd",
-        "outputId": "29a6d2ba-9ca3-40da-cffe-1519dd0dc2a9",
+        "outputId": "0c57e27f-dc7c-4f95-c14a-6126a53a6fa6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
         }
       },
-      "execution_count": 49,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "display_data",
@@ -651,12 +673,12 @@
       ],
       "metadata": {
         "id": "O10Wz44p9g8b",
-        "outputId": "b18a7087-88fc-4629-c5b6-0dd970f76793",
+        "outputId": "9c7d4af1-395b-4cfa-996c-ba2229e54ee6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -666,7 +688,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 50
+          "execution_count": 25
         }
       ]
     },
@@ -700,9 +722,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3090a63c-34b8-42de-e3b2-06a630832f5a"
+        "outputId": "42b8203e-a01f-4b8d-e630-f015daf29574"
       },
-      "execution_count": 52,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -712,7 +734,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 26
         }
       ]
     },
@@ -748,147 +770,229 @@
     {
       "cell_type": "code",
       "source": [
-        "pred"
+        "t = 0.5\n",
+        "\n",
+        "# Makes predictions at threshold 0.5\n",
+        "predict_churn = (y_pred >= t)\n",
+        "predict_no_churn = (y_pred < t)\n",
+        "\n",
+        "# Gets the actual target values\n",
+        "actual_churn = (y_val == 1)\n",
+        "actual_no_churn = (y_val == 0)\n",
+        "\n",
+        "# Calculates true positives (cases when we predicted churn correctly)\n",
+        "true_positive = (predict_churn & actual_churn).sum()\n",
+        "# Calculates false positives (cases when we predicted churn,but the customers didn't churn)\n",
+        "false_positive = (predict_churn & actual_no_churn).sum()\n",
+        "\n",
+        "# Calculates false negatives (cases when we predicted no churn, but the customers churned)\n",
+        "false_negative = (predict_no_churn & actual_churn).sum()\n",
+        "# Calculates true negatives (cases when we predicted no churn correctly)\n",
+        "true_negative = (predict_no_churn & actual_no_churn).sum()"
       ],
       "metadata": {
-        "id": "j-Mu6s3a_27m",
-        "outputId": "24f1b57f-7ff8-4a37-b824-4e361e7434c3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "j-Mu6s3a_27m"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[0.92667889, 0.07332111],\n",
-              "       [0.16783434, 0.83216566]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 74
-        }
-      ]
+      "execution_count": 28,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# select the first customer's probability of churn\n",
-        "pred[0, 1]"
+        "# Now we just need to put all these values together\n",
+        "confusion_table = np.array(\n",
+        "  #  predict neg    pos\n",
+        "  [\n",
+        "    [true_negative, false_positive], # actual neg\n",
+        "    [false_negative, true_positive]  # actual pos\n",
+        "  ]\n",
+        ")\n",
+        "\n",
+        "confusion_table"
       ],
       "metadata": {
         "id": "M0q9Kb5h_VPa",
-        "outputId": "25eb3a3c-b423-449f-b3db-74c89535c9eb",
+        "outputId": "f147b164-4f01-4d29-e350-954e62efe93c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.07332111085213508"
+              "array([[1202,  172],\n",
+              "       [ 197,  289]])"
             ]
           },
           "metadata": {},
-          "execution_count": 70
+          "execution_count": 29
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# select the second customer's probability of churn\n",
-        "pred[1, 1]"
+        "# Confused!! so we can turn them into fractions by dividing each value by the total number of items\n",
+        "confusion_table / confusion_table.sum()"
       ],
       "metadata": {
         "id": "EPt6IXiA_dnN",
-        "outputId": "c9e739d5-f914-43f9-e135-81f8fda26c75",
+        "outputId": "d13f244e-51f9-43e5-9a61-b16f178c28ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.8321656556545182"
+              "array([[0.64623656, 0.09247312],\n",
+              "       [0.10591398, 0.15537634]])"
             ]
           },
           "metadata": {},
-          "execution_count": 71
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# select the first customer's probability of staying\n",
-        "pred[0, 0]"
-      ],
-      "metadata": {
-        "id": "S9T7mh7m_kXg",
-        "outputId": "eaf15679-8c9a-4939-8588-45c616a51af8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.9266788891478649"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 72
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# select the second customer's probability of staying\n",
-        "pred[1, 0]"
-      ],
-      "metadata": {
-        "id": "oS2go-i1_s_a",
-        "outputId": "faa9fd55-2022-4146-8f0d-546b9363ade8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.16783434434548183"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 73
+          "execution_count": 30
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "So, we’ve built intuition on how logistic regression works, how to train it with\n",
-        "Scikit-learn, and how to apply it to new data."
+        "We actually see that the performance of the model\n",
+        "is not great: it makes quite a few errors when trying to identify users that will churn.\n",
+        "\n",
+        "We can repeat the same process for the small model."
+      ],
+      "metadata": {
+        "id": "8naTBaD3uzYU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# select the first customer's probability of staying\n",
+        "t = 0.5\n",
+        "\n",
+        "# Makes predictions at threshold 0.5\n",
+        "predict_churn = (y_pred_small >= t)\n",
+        "predict_no_churn = (y_pred_small < t)\n",
+        "\n",
+        "# Gets the actual target values\n",
+        "actual_churn = (y_val == 1)\n",
+        "actual_no_churn = (y_val == 0)\n",
+        "\n",
+        "# Calculates true positives (cases when we predicted churn correctly)\n",
+        "true_positive = (predict_churn & actual_churn).sum()\n",
+        "# Calculates false positives (cases when we predicted churn,but the customers didn't churn)\n",
+        "false_positive = (predict_churn & actual_no_churn).sum()\n",
+        "\n",
+        "# Calculates false negatives (cases when we predicted no churn, but the customers churned)\n",
+        "false_negative = (predict_no_churn & actual_churn).sum()\n",
+        "# Calculates true negatives (cases when we predicted no churn correctly)\n",
+        "true_negative = (predict_no_churn & actual_no_churn).sum()"
+      ],
+      "metadata": {
+        "id": "S9T7mh7m_kXg"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Now we just need to put all these values together\n",
+        "confusion_table = np.array(\n",
+        "  #  predict neg    pos\n",
+        "  [\n",
+        "    [true_negative, false_positive], # actual neg\n",
+        "    [false_negative, true_positive]  # actual pos\n",
+        "  ]\n",
+        ")\n",
+        "\n",
+        "confusion_table"
+      ],
+      "metadata": {
+        "id": "oS2go-i1_s_a",
+        "outputId": "d9667a47-748d-43bc-c0d4-1f6149a14fbc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1189,  185],\n",
+              "       [ 248,  238]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Confused!! so we can turn them into fractions by dividing each value by the total number of items\n",
+        "confusion_table / confusion_table.sum()"
+      ],
+      "metadata": {
+        "id": "U_XVJOD0wOyJ",
+        "outputId": "a581d914-0007-4da8-fe4e-8cecee320068",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.63924731, 0.09946237],\n",
+              "       [0.13333333, 0.12795699]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The values from the confusion table serve as the basis for many other evaluation\n",
+        "metrics."
       ],
       "metadata": {
         "id": "ULG413neAFXW"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Precision and recall"
+      ],
+      "metadata": {
+        "id": "qfK717ThwwKZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "uNW2iGphwxzO"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
