--- a/hands-on-quantum-machine-learning/1_binary_classification.ipynb
+++ b/hands-on-quantum-machine-learning/1_binary_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN17Q/5BNWKkrrv9zSgB3aO",
+      "authorship_tag": "ABX9TyMuHZzv2BNZnhi50Tr4qMu5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,7 +110,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V0w3YlciobB2",
-        "outputId": "571f6b87-b17a-46ff-b024-6b2930df1c40"
+        "outputId": "4a0701bb-3037-4972-d317-ae016b190ddf"
       },
       "execution_count": 2,
       "outputs": [
@@ -152,7 +152,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3yMWZFgLogin",
-        "outputId": "cbc8d9da-e489-4467-b9ec-93bcb4d3d9ac"
+        "outputId": "a4c3f570-a727-4ae4-8ef6-40f465c2a650"
       },
       "execution_count": 4,
       "outputs": [
@@ -162,7 +162,7 @@
           "text": [
             "Downloading titanic.zip to /content\n",
             "\r  0% 0.00/34.1k [00:00<?, ?B/s]\n",
-            "\r100% 34.1k/34.1k [00:00<00:00, 27.1MB/s]\n"
+            "\r100% 34.1k/34.1k [00:00<00:00, 1.92MB/s]\n"
           ]
         },
         {
@@ -200,9 +200,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XNTMWRXwm_fC",
-        "outputId": "8c137edc-3da9-4129-98ef-8f80c7feb33f"
+        "outputId": "1770bc0c-57bf-4a27-fe3c-f26797f6f33b"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,9 +225,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aYcanNH9p0Y_",
-        "outputId": "2210f4bf-e6a6-4f55-bb80-0d8eb68b54e5"
+        "outputId": "07a1923f-19db-44a3-dd7a-9f6b9a314429"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,9 +267,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hwkdBg36p8rf",
-        "outputId": "9f2e6e63-d7cd-47df-b97f-cb637f3c062f"
+        "outputId": "54ec1ba3-97f9-44ae-ce12-88bb1cf5d702"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -309,9 +309,9 @@
           "height": 548
         },
         "id": "BXMc0GSkqCbs",
-        "outputId": "dd1aa19e-a133-4f84-b6cf-8a5e8baf6726"
+        "outputId": "5245b4fb-3f4a-4686-8fa1-78b5e1c0d43d"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -340,7 +340,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a161c83a-7ca1-4e6d-9242-44059fb946ac\">\n",
+              "  <div id=\"df-e485d0ae-f983-48d8-a561-6d3acb89646e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -453,7 +453,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a161c83a-7ca1-4e6d-9242-44059fb946ac')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e485d0ae-f983-48d8-a561-6d3acb89646e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -504,12 +504,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a161c83a-7ca1-4e6d-9242-44059fb946ac button.colab-df-convert');\n",
+              "          document.querySelector('#df-e485d0ae-f983-48d8-a561-6d3acb89646e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a161c83a-7ca1-4e6d-9242-44059fb946ac');\n",
+              "          const element = document.querySelector('#df-e485d0ae-f983-48d8-a561-6d3acb89646e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -532,7 +532,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -546,10 +546,382 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Before we can feed our data into any machine learning algorithm, we need to\n",
+        "clean up."
+      ],
+      "metadata": {
+        "id": "z_iDiwu0S1EJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Missing Values"
+      ],
+      "metadata": {
+        "id": "NCqTVA0rS1_9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# option 1: We only have two passengers without it. This is bearable\n",
+        "train = train.dropna(subset=[\"Embarked\"])\n",
+        "\n",
+        "# option 2: We only have very few information about the cabin, let's drop it\n",
+        "train = train.drop(\"Cabin\", axis=1)\n",
+        "\n",
+        "# option 2: The age misses quite a few times. But intuition says it might be important for someone's chance to survive.\n",
+        "mean = train[\"Age\"].mean()\n",
+        "train[\"Age\"] = train[\"Age\"].fillna(mean)\n",
+        "\n",
+        "train.info()"
+      ],
+      "metadata": {
+        "id": "AZBv1MAKqJRA",
+        "outputId": "3a9672b4-7dde-4ae6-a5bf-5a6a5ff1440a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Int64Index: 889 entries, 0 to 890\n",
+            "Data columns (total 11 columns):\n",
+            " #   Column       Non-Null Count  Dtype  \n",
+            "---  ------       --------------  -----  \n",
+            " 0   PassengerId  889 non-null    int64  \n",
+            " 1   Survived     889 non-null    int64  \n",
+            " 2   Pclass       889 non-null    int64  \n",
+            " 3   Name         889 non-null    object \n",
+            " 4   Sex          889 non-null    object \n",
+            " 5   Age          889 non-null    float64\n",
+            " 6   SibSp        889 non-null    int64  \n",
+            " 7   Parch        889 non-null    int64  \n",
+            " 8   Ticket       889 non-null    object \n",
+            " 9   Fare         889 non-null    float64\n",
+            " 10  Embarked     889 non-null    object \n",
+            "dtypes: float64(2), int64(5), object(4)\n",
+            "memory usage: 83.3+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Identifiers"
+      ],
+      "metadata": {
+        "id": "FRxRQx9UY_ki"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Let’s have a look at how many unique values are\n",
+        "print(f\"There are {train['PassengerId'].nunique()} PassengerIds in the data\")\n",
+        "print(f\"There are {train['Name'].nunique()} different (unique) names in the data\")\n",
+        "print(f\"There are {train['Ticket'].nunique()} different (unique) ticket numbers in the data\")"
+      ],
+      "metadata": {
+        "id": "oNAm14wXZAas",
+        "outputId": "7d9051ae-8589-45bc-aed0-24a9764110de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "There are 889 PassengerIds in the data\n",
+            "There are 889 different (unique) names in the data\n",
+            "There are 680 different (unique) ticket numbers in the data\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let's remove these identifying columns\n",
+        "train = train.drop(\"PassengerId\", axis=1)\n",
+        "train = train.drop(\"Name\", axis=1)\n",
+        "train = train.drop(\"Ticket\", axis=1)\n",
+        "\n",
+        "train.info()"
+      ],
+      "metadata": {
+        "id": "_NQAs48Tab7B",
+        "outputId": "d7b7daa9-0d12-426c-fba3-5807fc930823",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Int64Index: 889 entries, 0 to 890\n",
+            "Data columns (total 8 columns):\n",
+            " #   Column    Non-Null Count  Dtype  \n",
+            "---  ------    --------------  -----  \n",
+            " 0   Survived  889 non-null    int64  \n",
+            " 1   Pclass    889 non-null    int64  \n",
+            " 2   Sex       889 non-null    object \n",
+            " 3   Age       889 non-null    float64\n",
+            " 4   SibSp     889 non-null    int64  \n",
+            " 5   Parch     889 non-null    int64  \n",
+            " 6   Fare      889 non-null    float64\n",
+            " 7   Embarked  889 non-null    object \n",
+            "dtypes: float64(2), int64(4), object(2)\n",
+            "memory usage: 62.5+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Categorical Attributes"
+      ],
+      "metadata": {
+        "id": "o-ZJDIlcbK1C"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "label_encoder = LabelEncoder()\n",
+        "\n",
+        "for col in [\"Sex\", \"Embarked\"]:\n",
+        "  label_encoder.fit(train[col])\n",
+        "  train[col] = label_encoder.transform(train[col])\n",
+        "\n",
+        "train.head()"
+      ],
+      "metadata": {
+        "id": "7xFV7ZbZbLi6",
+        "outputId": "8e7b10d7-1fa4-490f-9fae-f728fd658684",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "   Survived  Pclass  Sex   Age  SibSp  Parch     Fare  Embarked\n",
+              "0         0       3    1  22.0      1      0   7.2500         2\n",
+              "1         1       1    0  38.0      1      0  71.2833         0\n",
+              "2         1       3    0  26.0      0      0   7.9250         2\n",
+              "3         1       1    0  35.0      1      0  53.1000         2\n",
+              "4         0       3    1  35.0      0      0   8.0500         2"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-460164a5-f67a-4dd0-9704-1237a4addad4\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Survived</th>\n",
+              "      <th>Pclass</th>\n",
+              "      <th>Sex</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>SibSp</th>\n",
+              "      <th>Parch</th>\n",
+              "      <th>Fare</th>\n",
+              "      <th>Embarked</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>22.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>7.2500</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>38.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>71.2833</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0</td>\n",
+              "      <td>26.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>7.9250</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>35.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>53.1000</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>35.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>8.0500</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-460164a5-f67a-4dd0-9704-1237a4addad4')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-460164a5-f67a-4dd0-9704-1237a4addad4 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-460164a5-f67a-4dd0-9704-1237a4addad4');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Feature Scaling"
+      ],
+      "metadata": {
+        "id": "_APeg10icIS-"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "AZBv1MAKqJRA"
+        "id": "OZbvug7pcJ5h"
       },
       "execution_count": null,
       "outputs": []
