--- a/grokking-machine-learning/12-ensemble-learning/02_boosting_with_adaboost.ipynb
+++ b/grokking-machine-learning/12-ensemble-learning/02_boosting_with_adaboost.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMUYjZ6dpzOcR/nxyd/8Sv5",
+      "authorship_tag": "ABX9TyNVRVZMGYiHuSE3ewdSB7Nh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Bagging with AdaBoost"
+        "##Boosting with AdaBoost"
       ],
       "metadata": {
         "id": "R2qvSgZaw1fT"
@@ -98,7 +98,7 @@
       "metadata": {
         "id": "idY6aIXsyx0f"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "BoqFq30OMqRj"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -123,7 +123,7 @@
       "metadata": {
         "id": "CnbZ1Z4oRfnh"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -179,7 +179,7 @@
         },
         "outputId": "bd0ed50f-fec9-4172-ceaa-43b1f4e4267d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -443,7 +443,7 @@
         "id": "HOtFLxcwPKfO",
         "outputId": "1ecb976e-4a37-48ad-8e1e-6fdcb387c5f5"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -492,7 +492,7 @@
         "id": "eqM-Wm9LonJq",
         "outputId": "0b526d0b-0d1c-42fd-f39d-4ca957c2aaa6"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -519,7 +519,7 @@
         "id": "NdSeKMuYrxb_",
         "outputId": "16ed2f2c-d917-453a-fb50-0cf1608a16f5"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -561,7 +561,7 @@
           "height": 1000
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -700,7 +700,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
